Integrate audio-extractor submodule with UI components
- Created integration.py module for seamless submodule access
- Updated core.py to use audio-extractor functionality
- Enhanced main.py with --core-cli option for direct core access
- Updated README.md with submodule integration documentation:
  - Added installation instructions for git submodules
  - Documented core CLI usage and examples
  - Updated project structure to show submodule integration
- Added time range extraction support in UI layer
- Implemented proper error handling for missing submodule
- All core functionality now properly routed through submodule

The UI now provides:
✅ Direct core CLI access via --core-cli
✅ Integration layer for GUI/CLI to use core functions
✅ Proper dependency checking through submodule
✅ Time range extraction with start/end/duration support
✅ Batch processing capabilities
✅ URL and local file extraction

Example usage:
- python src/main.py --core-cli check-dependencies
- python src/main.py --core-cli --format mp3 local video.mp4
- python src/main.py --gui (uses integrated core for actual extraction)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies for Audio Extractor UI
+# Note: Audio processing dependencies are shared with the audio-extractor submodule
 
-# Audio/Video processing
+# Audio/Video processing (shared with audio-extractor submodule)
 yt-dlp>=2024.1.0
 ffmpeg-python>=0.2.0
 
